--- a/activities/haiku-generator/css/style.css
+++ b/activities/haiku-generator/css/style.css
@@ -17,4 +17,12 @@ body {
   align-content: center;
   height: 100vh; /* Body is the height of the viewport */
   overflow: hidden; /* Hide anything that goes off the window size */
+  background-color: #abcbab;
+}
+
+#haiku {
+  font-Family: Helvetica, sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  width: 80vw;
 }
