--- a/exercises/raving-redactionist-plus-plus/css/style.css
+++ b/exercises/raving-redactionist-plus-plus/css/style.css
@@ -13,10 +13,11 @@ body {
   padding: 0;
   margin: 0;
   display: grid; /* Set up the grid and justify/align to center */
-  justify-content: center;
-  align-content: center;
+  /* justify-content: center; */
+  /* align-content: center; */
   height: 100vh; /* Body is the height of the viewport */
   overflow: hidden; /* Hide anything that goes off the window size */
+  background-color: #e7eff0;
 }
 
 #secret-document {
@@ -35,4 +36,19 @@ body {
   background-color: none;
   color: red;
   text-decoration: underline;
+}
+
+header {
+  background-color: #093d43;
+  width: 100vw;
+  height: 100px;
+
+  color: white;
+  font-family: 'Syne Mono', monospace;
+  font-size: 24px;
+}
+
+.wrapper {
+  width: 50vw;
+  margin: auto;
 }
