--- a/exercises/raving-redactionist-plus-plus/css/style.css
+++ b/exercises/raving-redactionist-plus-plus/css/style.css
@@ -12,12 +12,18 @@ Also hides overflow.
 body {
   padding: 0;
   margin: 0;
-  display: grid; /* Set up the grid and justify/align to center */
+  /* display: grid; /* Set up the grid and justify/align to center */ */
   /* justify-content: center; */
   /* align-content: center; */
   height: 100vh; /* Body is the height of the viewport */
   overflow: hidden; /* Hide anything that goes off the window size */
   background-color: #e7eff0;
+  font-family: monospace;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
 #secret-document {
@@ -39,16 +45,55 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: center;
+
   background-color: #093d43;
   width: 100vw;
-  height: 100px;
+  height: 80px;
 
   color: white;
   font-family: 'Syne Mono', monospace;
-  font-size: 24px;
+  font-size: 26px;
 }
 
 .wrapper {
   width: 50vw;
   margin: auto;
+}
+
+.warning {
+  display: flex;
+  justify-content: center;
+
+  background-color: #D72853;
+  height: 140px;
+  font-size: 16px;
+}
+
+.warning p, .warning h2 {
+  margin: 0;
+}
+
+
+#lost {
+  position: absolute;
+  left: 25vw;
+  margin: auto;
+  padding: 8px;
+
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  height: 30vw;
+  width: 50vw;
+
+  background-color: rgba(6, 36, 42, 0.97);
+  text-align: center;
+  font-size: 35px;
+  color: white;
+  border-radius: 4px;
+
 }
