--- a/activities/code-taker/css/style.css
+++ b/activities/code-taker/css/style.css
@@ -9,12 +9,16 @@ Also hides overflow.
 
 **********************************************/
 
-body {
-  padding: 0;
-  margin: 0;
-  display: grid; /* Set up the grid and justify/align to center */
-  justify-content: center;
-  align-content: center;
-  height: 100vh; /* Body is the height of the viewport */
-  overflow: hidden; /* Hide anything that goes off the window size */
+#poem {
+  font-size: 1.2rem;
+}
+
+#answer {
+  width: 10rem;
+  height: 2rem;
+  border: 1px dashed black;
+}
+
+.found {
+  color: red;
 }
