E7: Changed the text and the secret message
I used Edgar Allan Poe's poem "A Valentine".

--- a/exercises/code-taker-plus-plus/css/style.css
+++ b/exercises/code-taker-plus-plus/css/style.css
@@ -14,9 +14,10 @@ Also hides overflow.
 }
 
 #answer {
-  width: 10rem;
+  width: 11rem;
   height: 2rem;
   border: 1px dashed black;
+  letter-spacing: 1px;
 }
 
 .found {
